--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <video></video>
       </div>
       <div class="btn-box">
-        <button type="default" class="start">开始</button>
+        <button type="default" class="start">开始111</button>
         <button type="default" class="stop">结束</button>
       </div>
     </div>
@@ -101,7 +101,7 @@
       };
 
       vc.onstart = async () => {
-        await vc.sleep(4000);
+        await vc.sleep(7000);
         vc.stop();
       };
 
